--- a/202312/19.md
+++ b/202312/19.md
@@ -13,25 +13,25 @@
 - 【徹底的に解説！】Djangoの基礎をマスターして、3つのアプリを作ろう！（Django2版 / 3版を同時公開中です）→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:498.7h
+Today:1.5h<br>
+Total:500.2h
 
 ------------------------------------------
 # HC以外の学習
 ## 機械学習・深層学習・生成AI
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)
 ### 取り組んだ課題一覧＋わかったこと
-LLM調査（業務）
+LLM調査
 - Azure等調査
 
 ### 学習時間
-Today:h<br>
-Total:161.5h
+Today:5.8h<br>
+Total:167.3h
 
 ## 英語
 ### 取り組んだ課題一覧＋わかったこと
 スタサプ
 
 ### 学習時間
-Today:h<br>
-Total:2.1h
+Today:0.4h<br>
+Total:2.5h
