--- a/202312/21.md
+++ b/202312/21.md
@@ -13,8 +13,8 @@
 - 【徹底的に解説！】Djangoの基礎をマスターして、3つのアプリを作ろう！（Django2版 / 3版を同時公開中です）→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:501.7h
+Today:2h<br>
+Total:503.7h
 
 ------------------------------------------
 # HC以外の学習
@@ -25,13 +25,13 @@ LLM調査
 - Azure等調査
 
 ### 学習時間
-Today:h<br>
-Total:171.3h
+Today:4h<br>
+Total:175.3h
 
 ## 英語
 ### 取り組んだ課題一覧＋わかったこと
 スタサプ
 
 ### 学習時間
-Today:h<br>
-Total:2.7h
+Today:0.4h<br>
+Total:3.1h
