--- a/202312/23.md
+++ b/202312/23.md
@@ -13,8 +13,8 @@
 - 【徹底的に解説！】Djangoの基礎をマスターして、3つのアプリを作ろう！（Django2版 / 3版を同時公開中です）→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:506.4h
+Today:4h<br>
+Total:510.4h
 
 ------------------------------------------
 # HC以外の学習
@@ -24,14 +24,16 @@ Total:506.4h
 LLM調査
 - Azure等調査
 
+Azure OpenAI Service実践ガイド ～ LLMを組み込んだシステム構築
+
 ### 学習時間
-Today:h<br>
-Total:178.3h
+Today:0.3h<br>
+Total:178.6h
 
 ## 英語
 ### 取り組んだ課題一覧＋わかったこと
 スタサプ
 
 ### 学習時間
-Today:h<br>
-Total:3.2h
+Today:0.3h<br>
+Total:3.5h
