--- a/202312/24.md
+++ b/202312/24.md
@@ -10,7 +10,8 @@
 - 業務の都合上AWSも並行して学習する
 - 【導入編・無料】未経験から合格！Cisco CCNA試験対策講座（Packet Tracerの演習も完備！）→完了
 - 【前編】未経験から合格！Cisco CCNA試験対策講座（Packet Tracerの演習も完備！）→仕掛中
-- 【徹底的に解説！】Djangoの基礎をマスターして、3つのアプリを作ろう！（Django2版 / 3版を同時公開中です）→仕掛中
+- 【徹底的に解説！】Djangoの基礎をマスターして、3つのアプリを作ろう！（Django2版 / 3版を同時公開中です）→完了
+- Django 公式チュートリアルをやる→仕掛中
 
 ### 学習時間
 Today:h<br>
