--- a/202312/24.md
+++ b/202312/24.md
@@ -14,8 +14,8 @@
 - Django 公式チュートリアルをやる→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:510.4h
+Today:2.6h<br>
+Total:513h
 
 ------------------------------------------
 # HC以外の学習
@@ -26,15 +26,16 @@ LLM調査
 - Azure等調査
 
 Azure OpenAI Service実践ガイド ～ LLMを組み込んだシステム構築
+- 仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:178.6h
+Today:0.3h<br>
+Total:178.9h
 
 ## 英語
 ### 取り組んだ課題一覧＋わかったこと
 スタサプ
 
 ### 学習時間
-Today:h<br>
-Total:3.5h
+Today:0.1h<br>
+Total:3.6h
