--- a/202312/25.md
+++ b/202312/25.md
@@ -12,8 +12,8 @@
 - Django 公式チュートリアルをやる→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:513h
+Today:1.5h<br>
+Total:514.5h
 
 ------------------------------------------
 # HC以外の学習
@@ -27,13 +27,13 @@ Azure OpenAI Service実践ガイド ～ LLMを組み込んだシステム構築
 - 仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:178.9h
+Today:4h<br>
+Total:182.9h
 
 ## 英語
 ### 取り組んだ課題一覧＋わかったこと
 スタサプ
 
 ### 学習時間
-Today:h<br>
-Total:3.6h
+Today:0.3h<br>
+Total:3.9h
