--- a/202312/26.md
+++ b/202312/26.md
@@ -12,8 +12,8 @@
 - Django 公式チュートリアルをやる→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:514.5h
+Today:2h<br>
+Total:516.5h
 
 ------------------------------------------
 # HC以外の学習
@@ -24,16 +24,16 @@ LLM調査
 - Azure等調査
 
 Azure OpenAI Service実践ガイド ～ LLMを組み込んだシステム構築
-- 仕掛中
+- 完了
 
 ### 学習時間
-Today:h<br>
-Total:182.9h
+Today:5h<br>
+Total:187.9h
 
 ## 英語
 ### 取り組んだ課題一覧＋わかったこと
 スタサプ
 
 ### 学習時間
-Today:h<br>
-Total:3.9h
+Today:0.1h<br>
+Total:4h
