--- a/202312/27.md
+++ b/202312/27.md
@@ -17,8 +17,8 @@ Django で EC サイトを作る
 - 仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:516.5h
+Today:3.9h<br>
+Total:520.4h
 
 ------------------------------------------
 # HC以外の学習
@@ -37,5 +37,5 @@ Total:187.9h
 スタサプ
 
 ### 学習時間
-Today:h<br>
-Total:4h
+Today:0.2h<br>
+Total:4.2h
