--- a/202312/28.md
+++ b/202312/28.md
@@ -12,11 +12,11 @@
 - 仕掛中
 
 Django で EC サイトを作る
-- 仕掛中
+- 商品一覧機能→レビュー中
 
 ### 学習時間
-Today:h<br>
-Total:520.4h
+Today:8.5h<br>
+Total:528.9h
 
 ------------------------------------------
 # HC以外の学習
@@ -35,5 +35,5 @@ Total:187.9h
 スタサプ
 
 ### 学習時間
-Today:h<br>
-Total:4.2h
+Today:0.1h<br>
+Total:4.3h
