--- a/202312/29.md
+++ b/202312/29.md
@@ -12,12 +12,12 @@
 - 仕掛中
 
 Django で EC サイトを作る
-- 商品一覧機能→レビュー中
-- 商品詳細機能→
+- 商品一覧機能→完了
+- 商品詳細機能→レビュー中
 
 ### 学習時間
-Today:h<br>
-Total:528.9h
+Today:6.8h<br>
+Total:535.7h
 
 ------------------------------------------
 # HC以外の学習
@@ -36,5 +36,5 @@ Total:187.9h
 スタサプ
 
 ### 学習時間
-Today:h<br>
-Total:4.3h
+Today:0.1h<br>
+Total:4.4h
