--- a/202312/30.md
+++ b/202312/30.md
@@ -14,11 +14,12 @@
 Django で EC サイトを作る
 - 商品一覧機能→完了
 - 商品詳細機能→レビュー中
-- 商品管理機能→
+- 商品管理機能→保留中
+- カート機能→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:535.7h
+Today:8h<br>
+Total:543.7h
 
 ------------------------------------------
 # HC以外の学習
@@ -37,5 +38,5 @@ Total:187.9h
 スタサプ
 
 ### 学習時間
-Today:h<br>
-Total:4.4h
+Today:0.1h<br>
+Total:4.5h
