--- a/202312/31.md
+++ b/202312/31.md
@@ -20,8 +20,8 @@ Django で EC サイトを作る
 - 購入明細→
 
 ### 学習時間
-Today:h<br>
-Total:543.7h
+Today:7.5h<br>
+Total:551.2h
 
 ------------------------------------------
 # HC以外の学習
