--- a/202401/01.md
+++ b/202401/01.md
@@ -20,8 +20,8 @@ Django で EC サイトを作る
 - 購入明細→
 
 ### 学習時間
-Today:h<br>
-Total:551.2h
+Today:2.5h<br>
+Total:553.7h
 
 ------------------------------------------
 # HC以外の学習
@@ -40,5 +40,5 @@ Total:187.9h
 スタサプ
 
 ### 学習時間
-Today:h<br>
-Total:4.5h
+Today:0.1h<br>
+Total:4.6h
