--- a/202401/04.md
+++ b/202401/04.md
@@ -14,14 +14,15 @@
 Django で EC サイトを作る
 - 商品一覧機能→完了
 - 商品詳細機能→完了
-- 商品管理機能→レビュー中
+- 商品管理機能→完了
 - カート機能→完了
 - チェックアウト機能→完了
-- 購入明細→
+- 購入明細→レビュー中
+- プロモーションコード機能→
 
 ### 学習時間
-Today:h<br>
-Total:565.4h
+Today:5.8h<br>
+Total:571.2h
 
 ------------------------------------------
 # HC以外の学習
