--- a/202401/05.md
+++ b/202401/05.md
@@ -18,11 +18,11 @@ Django で EC サイトを作る
 - カート機能→完了
 - チェックアウト機能→完了
 - 購入明細→レビュー中
-- プロモーションコード機能→仕掛中
+- プロモーションコード機能→レビュー中
 
 ### 学習時間
-Today:h<br>
-Total:571.2h
+Today:3h<br>
+Total:574.2h
 
 ------------------------------------------
 # HC以外の学習
@@ -41,5 +41,5 @@ Total:187.9h
 スタサプ
 
 ### 学習時間
-Today:h<br>
-Total:4.8h
+Today:0.3h<br>
+Total:5.1h
