--- a/202401/06.md
+++ b/202401/06.md
@@ -21,8 +21,8 @@ Django で EC サイトを作る
 - プロモーションコード機能→レビュー中
 
 ### 学習時間
-Today:h<br>
-Total:574.2h
+Today:6h<br>
+Total:580.2h
 
 ------------------------------------------
 # HC以外の学習
@@ -41,5 +41,5 @@ Total:187.9h
 スタサプ
 
 ### 学習時間
-Today:h<br>
-Total:5.1h
+Today:0.2h<br>
+Total:5.3h
