--- a/202401/07.md
+++ b/202401/07.md
@@ -17,15 +17,15 @@ DjangoでECサイトを作る
 - 商品管理機能→完了
 - カート機能→完了
 - チェックアウト機能→完了
-- 購入明細→レビュー中
-- プロモーションコード機能→レビュー中
+- 購入明細→完了
+- プロモーションコード機能→完了
 
 Djangoでtwitter Cloneを作る
 - サインアップ、ログイン機能実装→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:580.2h
+Today:2.7h<br>
+Total:582.9h
 
 ------------------------------------------
 # HC以外の学習
@@ -44,5 +44,5 @@ Total:187.9h
 スタサプ
 
 ### 学習時間
-Today:h<br>
-Total:5.3h
+Today:0.5h<br>
+Total:5.8h
