--- a/202401/08.md
+++ b/202401/08.md
@@ -11,21 +11,12 @@
 【前編】未経験から合格！Cisco CCNA試験対策講座（Packet Tracerの演習も完備！）
 - 仕掛中
 
-DjangoでECサイトを作る
-- 商品一覧機能→完了
-- 商品詳細機能→完了
-- 商品管理機能→完了
-- カート機能→完了
-- チェックアウト機能→完了
-- 購入明細→レビュー中
-- プロモーションコード機能→レビュー中
-
 Djangoでtwitter Cloneを作る
 - サインアップ、ログイン機能実装→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:580.2h
+Today:6.4h<br>
+Total:589.3h
 
 ------------------------------------------
 # HC以外の学習
@@ -44,5 +35,5 @@ Total:187.9h
 スタサプ
 
 ### 学習時間
-Today:h<br>
-Total:5.3h
+Today:0.1h<br>
+Total:5.9h
