--- a/202401/11.md
+++ b/202401/11.md
@@ -5,6 +5,7 @@
 ## 400時間達成!!_2023/11/3
 ## Rails→Pythonコースに切替_2023/11/29
 ## 500時間達成!!_2023/12/19
+## 600時間達成!!_2024/1/11
 
 ### 取り組んだ課題一覧＋わかったこと
 業務の都合上AWSも並行して学習する
@@ -16,8 +17,8 @@ Djangoでtwitter Cloneを作る
 - github ログインの実装→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:598.8h
+Today:3.3h<br>
+Total:602.1h
 
 ------------------------------------------
 # HC以外の学習
@@ -28,8 +29,8 @@ LLM調査
 - Azure等調査
 
 ### 学習時間
-Today:h<br>
-Total:187.9h
+Today:6h<br>
+Total:193.9h
 
 ## 英語
 ### 取り組んだ課題一覧＋わかったこと
