--- a/202401/12.md
+++ b/202401/12.md
@@ -14,11 +14,11 @@
 
 Djangoでtwitter Cloneを作る
 - サインアップ、ログイン機能実装→完了
-- github ログインの実装→仕掛中
+- github ログインの実装→レビュー中
 
 ### 学習時間
-Today:h<br>
-Total:602.1h
+Today:1h<br>
+Total:603.1h
 
 ------------------------------------------
 # HC以外の学習
@@ -29,13 +29,13 @@ LLM調査
 - Azure等調査
 
 ### 学習時間
-Today:h<br>
-Total:193.9h
+Today:4h<br>
+Total:197.9h
 
 ## 英語
 ### 取り組んだ課題一覧＋わかったこと
 スタサプ
 
 ### 学習時間
-Today:h<br>
-Total:6.5h
+Today:0.1h<br>
+Total:6.6h
