--- a/202401/13.md
+++ b/202401/13.md
@@ -17,8 +17,8 @@ Djangoでtwitter Cloneを作る
 - github ログインの実装→レビュー中
 
 ### 学習時間
-Today:h<br>
-Total:603.1h
+Today:2.5h<br>
+Total:605.6h
 
 ------------------------------------------
 # HC以外の学習
