--- a/202401/14.md
+++ b/202401/14.md
@@ -18,8 +18,8 @@ Djangoでtwitter Cloneを作る
 - トップページの作成→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:605.6h
+Today:3.8h<br>
+Total:609.4h
 
 ------------------------------------------
 # HC以外の学習
