--- a/202401/15.md
+++ b/202401/15.md
@@ -27,11 +27,10 @@ Total:609.4h
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)
 ### 取り組んだ課題一覧＋わかったこと
 LLM調査
-- Azure等調査
 
 ### 学習時間
-Today:h<br>
-Total:197.9h
+Today:7h<br>
+Total:204.9h
 
 ## 英語
 ### 取り組んだ課題一覧＋わかったこと
