--- a/202401/15.md
+++ b/202401/15.md
@@ -23,14 +23,15 @@ Total:609.4h
 
 ------------------------------------------
 # HC以外の学習
-## 機械学習・深層学習・生成AI
+## 機械学習・深層学習・生成AI等
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)
 ### 取り組んだ課題一覧＋わかったこと
 LLM調査
+ソフトウェアアーキテクチャの基礎
 
 ### 学習時間
-Today:7h<br>
-Total:204.9h
+Today:8h<br>
+Total:205.9h
 
 ## 英語
 ### 取り組んだ課題一覧＋わかったこと
