--- a/202401/16.md
+++ b/202401/16.md
@@ -18,8 +18,8 @@ Djangoでtwitter Cloneを作る
 - トップページの作成→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:609.4h
+Today:5h<br>
+Total:614.4h
 
 ------------------------------------------
 # HC以外の学習
@@ -30,8 +30,8 @@ LLM調査
 ソフトウェアアーキテクチャの基礎
 
 ### 学習時間
-Today:h<br>
-Total:205.9h
+Today:0.5h<br>
+Total:210.9h
 
 ## 英語
 ### 取り組んだ課題一覧＋わかったこと
