--- a/202401/17.md
+++ b/202401/17.md
@@ -18,8 +18,8 @@ Djangoでtwitter Cloneを作る
 - トップページの作成→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:614.4h
+Today:2h<br>
+Total:616.4h
 
 ------------------------------------------
 # HC以外の学習
@@ -30,13 +30,14 @@ LLM調査
 ソフトウェアアーキテクチャの基礎
 
 ### 学習時間
-Today:h<br>
-Total:210.9h
+Today:4h<br>
+Total:214.9h
 
 ## 英語
 ### 取り組んだ課題一覧＋わかったこと
 スタサプ
+一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:6.6h
+Today:0.4h<br>
+Total:7h
