--- a/202401/19.md
+++ b/202401/19.md
@@ -8,18 +8,14 @@
 ## 600時間達成!!_2024/1/11
 
 ### 取り組んだ課題一覧＋わかったこと
-業務の都合上AWSも並行して学習する
-【前編】未経験から合格！Cisco CCNA試験対策講座（Packet Tracerの演習も完備！）
-- 仕掛中
-
 Djangoでtwitter Cloneを作る
 - サインアップ、ログイン機能実装→完了
 - github ログインの実装→完了
 - トップページの作成→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:618.2h
+Today:0.7h<br>
+Total:618.9h
 
 ------------------------------------------
 # HC以外の学習
@@ -30,8 +26,8 @@ LLM調査
 ソフトウェアアーキテクチャの基礎
 
 ### 学習時間
-Today:h<br>
-Total:218.9h
+Today:4h<br>
+Total:222.9h
 
 ## 英語
 ### 取り組んだ課題一覧＋わかったこと
@@ -39,5 +35,5 @@ Total:218.9h
 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:7.4h
+Today:0.4h<br>
+Total:7.8h
