--- a/202401/20.md
+++ b/202401/20.md
@@ -14,8 +14,8 @@ Djangoでtwitter Cloneを作る
 - トップページの作成→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:618.9h
+Today:4.8h<br>
+Total:623.7h
 
 ------------------------------------------
 # HC以外の学習
@@ -35,5 +35,5 @@ Total:222.9h
 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:7.8h
+Today:0.1h<br>
+Total:7.9h
