--- a/202401/21.md
+++ b/202401/21.md
@@ -11,11 +11,11 @@
 Djangoでtwitter Cloneを作る
 - サインアップ、ログイン機能実装→完了
 - github ログインの実装→完了
-- トップページの作成→仕掛中
+- トップページの作成→レビュー中
 
 ### 学習時間
-Today:h<br>
-Total:623.7h
+Today:7.5h<br>
+Total:631.2h
 
 ------------------------------------------
 # HC以外の学習
@@ -35,5 +35,5 @@ Total:222.9h
 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:7.9h
+Today:0.5h<br>
+Total:8.4h
