--- a/202401/22.md
+++ b/202401/22.md
@@ -14,8 +14,8 @@ Djangoでtwitter Cloneを作る
 - トップページの作成→レビュー中
 
 ### 学習時間
-Today:h<br>
-Total:631.2h
+Today:0.9h<br>
+Total:632.1h
 
 ------------------------------------------
 # HC以外の学習
@@ -35,5 +35,5 @@ Total:222.9h
 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:8.4h
+Today:0.2h<br>
+Total:8.6h
