--- a/202401/24.md
+++ b/202401/24.md
@@ -15,8 +15,8 @@ Djangoでtwitter Cloneを作る
 - ユーザープロフィールページの作成→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:635.2h
+Today:2h<br>
+Total:637.2h
 
 ------------------------------------------
 # HC以外の学習
@@ -36,5 +36,5 @@ Total:225.9h
 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:8.6h
+Today:0.5h<br>
+Total:9.1h
