--- a/202401/24.md
+++ b/202401/24.md
@@ -24,11 +24,10 @@ Total:637.2h
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)
 ### 取り組んだ課題一覧＋わかったこと
 LLM調査
-ソフトウェアアーキテクチャの基礎
 
 ### 学習時間
-Today:h<br>
-Total:225.9h
+Today:3h<br>
+Total:228.9h
 
 ## 英語
 ### 取り組んだ課題一覧＋わかったこと
