--- a/202401/25.md
+++ b/202401/25.md
@@ -15,20 +15,27 @@ Djangoでtwitter Cloneを作る
 - ユーザープロフィールページの作成→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:637.2h
+Today:1.5h<br>
+Total:638.7h
 
 ------------------------------------------
-# HC以外の学習
+# HC以外の学習（業務以外の学習とする）
 ## 機械学習・深層学習・生成AI等
 ## [学習ロードマップ](https://github.com/sousou1216/machine_learning/tree/main)
 ### 取り組んだ課題一覧＋わかったこと
-LLM調査
-ソフトウェアアーキテクチャの基礎
 
 ### 学習時間
 Today:h<br>
 Total:228.9h
+
+## ブロックチェーン
+### 取り組んだ課題一覧＋わかったこと
+【注目スキル：DApp(分散アプリケーション)】体系的に学ぶ『スマートコントラクト』開発〜NFT編ステージ１〜
+- s1, 2
+
+### 学習時間
+Today:1.3h<br>
+Total:1.3h
 
 ## 英語
 ### 取り組んだ課題一覧＋わかったこと
@@ -36,5 +43,5 @@ Total:228.9h
 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:9.1h
+Today:0.2h<br>
+Total:9.3h
