--- a/202401/26.md
+++ b/202401/26.md
@@ -15,8 +15,8 @@ Djangoでtwitter Cloneを作る
 - ユーザープロフィールページの作成→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:638.7h
+Today:0.9h<br>
+Total:639.6h
 
 ------------------------------------------
 # HC以外の学習（業務以外の学習とする）
@@ -31,7 +31,7 @@ Total:228.9h
 ## ブロックチェーン
 ### 取り組んだ課題一覧＋わかったこと
 【注目スキル：DApp(分散アプリケーション)】体系的に学ぶ『スマートコントラクト』開発〜NFT編ステージ１〜
-- s1, 2
+- 
 
 ### 学習時間
 Today:h<br>
@@ -43,5 +43,5 @@ Total:1.3h
 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:9.3h
+Today:0.1h<br>
+Total:9.4h
