--- a/202401/27.md
+++ b/202401/27.md
@@ -12,11 +12,12 @@ Djangoでtwitter Cloneを作る
 - サインアップ、ログイン機能実装→完了
 - github ログインの実装→完了
 - トップページの作成→完了
-- ユーザープロフィールページの作成→仕掛中
+- ユーザープロフィールページの作成→レビュー中
+- プロフィール編集画面→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:639.6h
+Today:6.3h<br>
+Total:645.9h
 
 ------------------------------------------
 # HC以外の学習（業務以外の学習とする）
@@ -43,5 +44,5 @@ Total:1.3h
 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:9.4h
+Today:0.2h<br>
+Total:9.6h
