--- a/202401/28.md
+++ b/202401/28.md
@@ -32,11 +32,11 @@ Total:228.9h
 ## ブロックチェーン
 ### 取り組んだ課題一覧＋わかったこと
 【注目スキル：DApp(分散アプリケーション)】体系的に学ぶ『スマートコントラクト』開発〜NFT編ステージ１〜
-- 
+- s3,4/s16
 
 ### 学習時間
-Today:h<br>
-Total:1.3h
+Today:2.6h<br>
+Total:3.9h
 
 ## 英語
 ### 取り組んだ課題一覧＋わかったこと
@@ -44,5 +44,5 @@ Total:1.3h
 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:9.6h
+Today:0.3h<br>
+Total:9.9h
