--- a/202401/29.md
+++ b/202401/29.md
@@ -16,8 +16,8 @@ Djangoでtwitter Cloneを作る
 - プロフィール編集画面→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:645.9h
+Today:3.9h<br>
+Total:649.8h
 
 ------------------------------------------
 # HC以外の学習（業務以外の学習とする）
@@ -32,11 +32,11 @@ Total:228.9h
 ## ブロックチェーン
 ### 取り組んだ課題一覧＋わかったこと
 【注目スキル：DApp(分散アプリケーション)】体系的に学ぶ『スマートコントラクト』開発〜NFT編ステージ１〜
-- s3,4/s16
+- s5/s16
 
 ### 学習時間
-Today:h<br>
-Total:3.9h
+Today:0.9h<br>
+Total:4.8h
 
 ## 英語
 ### 取り組んだ課題一覧＋わかったこと
@@ -44,5 +44,5 @@ Total:3.9h
 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:9.9h
+Today:0.1h<br>
+Total:10h
