--- a/202401/30.md
+++ b/202401/30.md
@@ -26,13 +26,13 @@ Total:649.8h
 ### 取り組んだ課題一覧＋わかったこと
 
 ### 学習時間
-Today:h<br>
-Total:228.9h
+Today:3h<br>
+Total:231.9h
 
 ## ブロックチェーン
 ### 取り組んだ課題一覧＋わかったこと
 【注目スキル：DApp(分散アプリケーション)】体系的に学ぶ『スマートコントラクト』開発〜NFT編ステージ１〜
-- /s16
+- s6-/s16
 
 ### 学習時間
 Today:h<br>
