--- a/202401/30.md
+++ b/202401/30.md
@@ -16,8 +16,8 @@ Djangoでtwitter Cloneを作る
 - プロフィール編集画面→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:649.8h
+Today:1.3h<br>
+Total:651.1h
 
 ------------------------------------------
 # HC以外の学習（業務以外の学習とする）
@@ -35,8 +35,8 @@ Total:231.9h
 - s6-/s16
 
 ### 学習時間
-Today:h<br>
-Total:4.8h
+Today:0.5h<br>
+Total:5.3h
 
 ## 英語
 ### 取り組んだ課題一覧＋わかったこと
