--- a/202401/31.md
+++ b/202401/31.md
@@ -12,12 +12,12 @@ Djangoでtwitter Cloneを作る
 - サインアップ、ログイン機能実装→完了
 - github ログインの実装→完了
 - トップページの作成→完了
-- ユーザープロフィールページの作成→レビュー中
+- ユーザープロフィールページの作成→完了
 - プロフィール編集画面→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:651.1h
+Today:1.3h<br>
+Total:652.4h
 
 ------------------------------------------
 # HC以外の学習（業務以外の学習とする）
@@ -32,11 +32,11 @@ Total:231.9h
 ## ブロックチェーン
 ### 取り組んだ課題一覧＋わかったこと
 【注目スキル：DApp(分散アプリケーション)】体系的に学ぶ『スマートコントラクト』開発〜NFT編ステージ１〜
-- s6-/s16
+- s6-8/s16
 
 ### 学習時間
-Today:h<br>
-Total:5.3h
+Today:2.3h<br>
+Total:7.6h
 
 ## 英語
 ### 取り組んだ課題一覧＋わかったこと
@@ -44,5 +44,5 @@ Total:5.3h
 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:10h
+Today:0.2h<br>
+Total:10.2h
