--- a/202402/01.md
+++ b/202402/01.md
@@ -16,8 +16,8 @@ Djangoでtwitter Cloneを作る
 - プロフィール編集画面→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:652.4h
+Today:0.7h<br>
+Total:653.1h
 
 ------------------------------------------
 # HC以外の学習（業務以外の学習とする）
@@ -32,11 +32,11 @@ Total:231.9h
 ## ブロックチェーン
 ### 取り組んだ課題一覧＋わかったこと
 【注目スキル：DApp(分散アプリケーション)】体系的に学ぶ『スマートコントラクト』開発〜NFT編ステージ１〜
-- s8-/s16
+- s8-16/s16
 
 ### 学習時間
-Today:h<br>
-Total:7.6h
+Today:4.6h<br>
+Total:14.2h
 
 ## 英語
 ### 取り組んだ課題一覧＋わかったこと
@@ -44,5 +44,5 @@ Total:7.6h
 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:10.2h
+Today:0.1h<br>
+Total:10.3h
