--- a/202402/03.md
+++ b/202402/03.md
@@ -13,7 +13,8 @@ Djangoでtwitter Cloneを作る
 - github ログインの実装→完了
 - トップページの作成→完了
 - ユーザープロフィールページの作成→完了
-- プロフィール編集画面→仕掛中
+- プロフィール編集画面→レビュー中
+- ツイート作成→仕掛中
 
 ### 学習時間
 Today:h<br>
