--- a/202402/03.md
+++ b/202402/03.md
@@ -17,8 +17,8 @@ Djangoでtwitter Cloneを作る
 - ツイート作成→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:655.1h
+Today:5h<br>
+Total:660.1h
 
 ------------------------------------------
 # HC以外の学習（業務以外の学習とする）
@@ -45,5 +45,5 @@ Total:16.5h
 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:10.4h
+Today:0.1h<br>
+Total:10.5h
