--- a/202402/05.md
+++ b/202402/05.md
@@ -14,12 +14,12 @@ Djangoでtwitter Cloneを作る
 - トップページの作成→完了
 - ユーザープロフィールページの作成→完了
 - プロフィール編集画面→完了
-- ツイート作成→レビュー中
+- ツイート作成→完了
 - ツイート詳細ページ作成→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:662.1h
+Today:1.3h<br>
+Total:663.4h
 
 ------------------------------------------
 # HC以外の学習（業務以外の学習とする）
@@ -34,11 +34,11 @@ Total:231.9h
 ## ブロックチェーン
 ### 取り組んだ課題一覧＋わかったこと
 Mastering Solidity Basics 〜入門レベルを脱してSolidityを自在に操るための基礎固め〜
-- s1-
+- s1-2
 
 ### 学習時間
-Today:h<br>
-Total:17.2h
+Today:1.5h<br>
+Total:18.7h
 
 ## 英語
 ### 取り組んだ課題一覧＋わかったこと
@@ -46,5 +46,5 @@ Total:17.2h
 - 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:10.7h
+Today:0.1h<br>
+Total:10.8h
