--- a/202402/07.md
+++ b/202402/07.md
@@ -18,8 +18,8 @@ Djangoでtwitter Cloneを作る
 - ツイート詳細ページ作成→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:664.7h
+Today:1.6h<br>
+Total:666.3h
 
 ------------------------------------------
 # HC以外の学習（業務以外の学習とする）
@@ -46,5 +46,5 @@ Total:20.7h
 - 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:10.9h
+Today:0.1h<br>
+Total:11h
