--- a/202402/09.md
+++ b/202402/09.md
@@ -18,8 +18,8 @@ Djangoでtwitter Cloneを作る
 - ツイート詳細ページ作成→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:666.4h
+Today:1.1h<br>
+Total:667.5h
 
 ------------------------------------------
 # HC以外の学習（業務以外の学習とする）
@@ -46,5 +46,5 @@ Total:20.7h
 - 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:11.2h
+Today:0.1h<br>
+Total:11.3h
