--- a/202402/11.md
+++ b/202402/11.md
@@ -18,11 +18,11 @@ Djangoでtwitter Cloneを作る
 - ツイート詳細ページ作成→レビュー中
 - いいね機能→レビュー中
 - リツイート機能→レビュー中
-- 
+- ユーザーフォロー機能→レビュー中
 
 ### 学習時間
-Today:h<br>
-Total:670.2h
+Today:4.1h<br>
+Total:674.3h
 
 ------------------------------------------
 # HC以外の学習（業務以外の学習とする）
@@ -49,5 +49,5 @@ Total:20.7h
 - 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:11.4h
+Today:0.1h<br>
+Total:11.5h
