--- a/202402/12.md
+++ b/202402/12.md
@@ -19,7 +19,8 @@ Djangoでtwitter Cloneを作る
 - いいね機能→レビュー中
 - リツイート機能→レビュー中
 - ユーザーフォロー機能→レビュー中
-- ブックマーク機能→
+- ブックマーク機能→レビュー中
+- 
 
 ### 学習時間
 Today:h<br>
