--- a/202402/12.md
+++ b/202402/12.md
@@ -23,8 +23,8 @@ Djangoでtwitter Cloneを作る
 - 
 
 ### 学習時間
-Today:h<br>
-Total:674.3h
+Today:1.3h<br>
+Total:675.6h
 
 ------------------------------------------
 # HC以外の学習（業務以外の学習とする）
@@ -51,5 +51,5 @@ Total:20.7h
 - 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:11.5h
+Today:0.1h<br>
+Total:11.6h
