--- a/202402/13.md
+++ b/202402/13.md
@@ -16,15 +16,14 @@ Djangoでtwitter Cloneを作る
 - プロフィール編集画面→完了
 - ツイート作成→完了
 - ツイート詳細ページ作成→レビュー中
-- いいね機能→レビュー中
-- リツイート機能→レビュー中
-- ユーザーフォロー機能→レビュー中
-- ブックマーク機能→レビュー中
-- 
+- いいね機能→完了
+- リツイート機能→完了
+- ユーザーフォロー機能→完了
+- ブックマーク機能→完了
 
 ### 学習時間
-Today:h<br>
-Total:675.6h
+Today:1h<br>
+Total:676.6h
 
 ------------------------------------------
 # HC以外の学習（業務以外の学習とする）
@@ -51,5 +50,5 @@ Total:20.7h
 - 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:11.6h
+Today:0.1h<br>
+Total:11.7h
