--- a/202402/17.md
+++ b/202402/17.md
@@ -20,10 +20,11 @@ Djangoでtwitter Cloneを作る
 - リツイート機能→完了
 - ユーザーフォロー機能→完了
 - ブックマーク機能→完了
+- メッセージ機能→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:685.1h
+Today:3.7h<br>
+Total:688.8h
 
 ------------------------------------------
 # HC以外の学習（業務以外の学習とする）
@@ -38,7 +39,7 @@ Total:231.9h
 ## ブロックチェーン
 ### 取り組んだ課題一覧＋わかったこと
 Mastering Solidity Basics 〜入門レベルを脱してSolidityを自在に操るための基礎固め〜
-- s3-
+- s5-
 
 ### 学習時間
 Today:h<br>
@@ -50,5 +51,5 @@ Total:24.1h
 - 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:12.2h
+Today:0.2h<br>
+Total:12.4h
