--- a/202402/20.md
+++ b/202402/20.md
@@ -16,17 +16,20 @@ Djangoでtwitter Cloneを作る
 - ユーザープロフィールページの作成→完了
 - プロフィール編集画面→完了
 - ツイート作成→完了
-- ツイート詳細ページ作成→レビュー中
+- ツイート詳細ページ作成→完了
 - いいね機能→完了
 - リツイート機能→完了
 - ユーザーフォロー機能→完了
 - ブックマーク機能→完了
 - メッセージ機能→完了
-- 通知機能→
+- 通知機能→レビュー中
+
+テスト技法について学ぶ
+- 仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:700.6h
+Today:3.6h<br>
+Total:704.2h
 
 ------------------------------------------
 # HC以外の学習（業務以外の学習とする）
@@ -53,5 +56,5 @@ Total:24.1h
 - 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:12.6h
+Today:0.1h<br>
+Total:12.7h
