--- a/202402/21.md
+++ b/202402/21.md
@@ -25,11 +25,11 @@ Djangoでtwitter Cloneを作る
 - 通知機能→レビュー中
 
 テスト技法について学ぶ
-- 仕掛中
+- s1-4
 
 ### 学習時間
-Today:h<br>
-Total:704.2h
+Today:2h<br>
+Total:706.2h
 
 ------------------------------------------
 # HC以外の学習（業務以外の学習とする）
@@ -56,5 +56,5 @@ Total:24.1h
 - 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:12.7h
+Today:0.1h<br>
+Total:12.8h
