--- a/202402/22.md
+++ b/202402/22.md
@@ -25,11 +25,11 @@ Djangoでtwitter Cloneを作る
 - 通知機能→レビュー中
 
 テスト技法について学ぶ
-- s5-
+- s5-7
 
 ### 学習時間
-Today:h<br>
-Total:706.2h
+Today:3.3h<br>
+Total:709.5h
 
 ------------------------------------------
 # HC以外の学習（業務以外の学習とする）
@@ -56,5 +56,5 @@ Total:24.1h
 - 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:12.8h
+Today:0.1h<br>
+Total:12.9h
