--- a/202402/23.md
+++ b/202402/23.md
@@ -26,11 +26,14 @@ Djangoでtwitter Cloneを作る
 - 全ての工程完了！！
 
 テスト技法について学ぶ
-- s7-
+- s7-完了
+
+テスト課題
+- 仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:709.5h
+Today:5.7h<br>
+Total:715.2h
 
 ------------------------------------------
 # HC以外の学習（業務以外の学習とする）
@@ -57,5 +60,5 @@ Total:24.1h
 - 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:12.9h
+Today:0.1h<br>
+Total:13h
