--- a/202402/24.md
+++ b/202402/24.md
@@ -13,8 +13,8 @@
 - 仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:715.2h
+Today:4h<br>
+Total:719.2h
 
 ------------------------------------------
 # HC以外の学習（業務以外の学習とする）
@@ -41,5 +41,5 @@ Total:24.1h
 - 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:13h
+Today:0.1h<br>
+Total:13.1h
