--- a/202402/27.md
+++ b/202402/27.md
@@ -13,8 +13,8 @@
 - 仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:734.1h
+Today:3.5h<br>
+Total:737.6h
 
 ------------------------------------------
 # HC以外の学習（業務以外の学習とする）
@@ -41,5 +41,5 @@ Total:24.1h
 - 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:13.3h
+Today:0.1h<br>
+Total:13.4h
