--- a/202402/29.md
+++ b/202402/29.md
@@ -10,11 +10,11 @@
 
 ### 取り組んだ課題一覧＋わかったこと
 テスト課題
-- 仕掛中
+- レビュー中
 
 ### 学習時間
-Today:h<br>
-Total:741.2h
+Today:7.4h<br>
+Total:748.6h
 
 ------------------------------------------
 # HC以外の学習（業務以外の学習とする）
@@ -41,5 +41,5 @@ Total:24.1h
 - 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:13.5h
+Today:0.1h<br>
+Total:13.6h
