--- a/202403/01.md
+++ b/202403/01.md
@@ -10,11 +10,13 @@
 
 ### 取り組んだ課題一覧＋わかったこと
 テスト課題
-- レビュー中
+- 完了
+JavaScript
+- 初級
 
 ### 学習時間
-Today:h<br>
-Total:748.6h
+Today:1.5h<br>
+Total:750.1h
 
 ------------------------------------------
 # HC以外の学習（業務以外の学習とする）
@@ -41,5 +43,5 @@ Total:24.1h
 - 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:13.6h
+Today:0.1h<br>
+Total:13.7h
