--- a/202403/02.md
+++ b/202403/02.md
@@ -9,10 +9,9 @@
 ## 700時間達成!!_2024/2/19
 
 ### 取り組んだ課題一覧＋わかったこと
-テスト課題
-- 完了
 JavaScript
-- 初級
+- 動画版 JavaScriptの基本を見る→完了
+- 書籍版 JavaScriptの基本を読む→仕掛中
 
 ### 学習時間
 Today:h<br>
