--- a/202403/02.md
+++ b/202403/02.md
@@ -11,7 +11,8 @@
 ### 取り組んだ課題一覧＋わかったこと
 JavaScript
 - 動画版 JavaScriptの基本を見る→完了
-- 書籍版 JavaScriptの基本を読む→仕掛中
+- 書籍版 JavaScriptの基本を読む→完了
+- JavaScript入門・完全版→仕掛中
 
 ### 学習時間
 Today:h<br>
