--- a/202403/02.md
+++ b/202403/02.md
@@ -15,8 +15,8 @@ JavaScript
 - JavaScript入門・完全版→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:750.1h
+Today:2.9h<br>
+Total:753h
 
 ------------------------------------------
 # HC以外の学習（業務以外の学習とする）
@@ -43,5 +43,5 @@ Total:24.1h
 - 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:13.7h
+Today:0.1h<br>
+Total:13.8h
