--- a/202403/03.md
+++ b/202403/03.md
@@ -12,11 +12,11 @@
 JavaScript
 - 動画版 JavaScriptの基本を見る→完了
 - 書籍版 JavaScriptの基本を読む→完了
-- JavaScript入門・完全版→仕掛中
+- JavaScript入門・完全版→完了
 
 ### 学習時間
-Today:h<br>
-Total:753h
+Today:3.4h<br>
+Total:756.4h
 
 ------------------------------------------
 # HC以外の学習（業務以外の学習とする）
@@ -43,5 +43,5 @@ Total:24.1h
 - 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:13.8h
+Today:0.1h<br>
+Total:13.9h
