--- a/202403/04.md
+++ b/202403/04.md
@@ -1,6 +1,6 @@
 # 目安：HC内で1,000時間の学習
-100時間達成!!_2023/8/2
-200時間達成!!_2023/8/24
+#### 100時間達成!!_2023/8/2
+#### 200時間達成!!_2023/8/24
 #### 300時間達成!!_2023/10/4
 #### 400時間達成!!_2023/11/3
 #### Rails→Pythonコースに切替_2023/11/29
