--- a/202403/04.md
+++ b/202403/04.md
@@ -1,12 +1,12 @@
 # 目安：HC内で1,000時間の学習
-#### 100時間達成!!_2023/8/2
-#### 200時間達成!!_2023/8/24
-#### 300時間達成!!_2023/10/4
-#### 400時間達成!!_2023/11/3
-#### Rails→Pythonコースに切替_2023/11/29
-#### 500時間達成!!_2023/12/19
-#### 600時間達成!!_2024/1/11
-#### 700時間達成!!_2024/2/19
+### 100時間達成!!_2023/8/2
+### 200時間達成!!_2023/8/24
+### 300時間達成!!_2023/10/4
+### 400時間達成!!_2023/11/3
+### Rails→Pythonコースに切替_2023/11/29
+### 500時間達成!!_2023/12/19
+### 600時間達成!!_2024/1/11
+### 700時間達成!!_2024/2/19
 
 ------------------------------------------
 ## HC
