--- a/202403/04.md
+++ b/202403/04.md
@@ -15,8 +15,8 @@ JavaScript
 - JavaScript Primer→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:756.4h
+Today:0.4h<br>
+Total:756.8h
 
 ------------------------------------------
 ## 英語
@@ -25,5 +25,5 @@ Total:756.4h
 - 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:13.9h
+Today:0.1h<br>
+Total:14h
