--- a/202403/05.md
+++ b/202403/05.md
@@ -15,8 +15,8 @@ JavaScript
 - JavaScript Primer→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:756.8h
+Today:0.8h<br>
+Total:757.6h
 
 ------------------------------------------
 ## 英語
@@ -25,5 +25,5 @@ Total:756.8h
 - 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:14h
+Today:0.1h<br>
+Total:14.1h
