--- a/202403/06.md
+++ b/202403/06.md
@@ -15,8 +15,8 @@ JavaScript
 - JavaScript Primer→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:757.6h
+Today:0.3h<br>
+Total:757.9h
 
 ------------------------------------------
 ## 英語
@@ -25,5 +25,5 @@ Total:757.6h
 - 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:14.1h
+Today:0.1h<br>
+Total:14.2h
