--- a/202403/07.md
+++ b/202403/07.md
@@ -15,8 +15,8 @@ JavaScript
 - JavaScript Primer→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:757.9h
+Today:1.3h<br>
+Total:759.2h
 
 ------------------------------------------
 ## 英語
@@ -25,5 +25,5 @@ Total:757.9h
 - 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:14.2h
+Today:0.1h<br>
+Total:14.3h
