--- a/202403/08.md
+++ b/202403/08.md
@@ -15,8 +15,8 @@ JavaScript
 - JavaScript Primer→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:759.2h
+Today:0.3h<br>
+Total:759.5h
 
 ------------------------------------------
 ## 英語
@@ -25,5 +25,5 @@ Total:759.2h
 - 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:14.3h
+Today:0.1h<br>
+Total:14.4h
