--- a/202403/09.md
+++ b/202403/09.md
@@ -15,8 +15,8 @@ JavaScript
 - JavaScript Primer→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:759.5h
+Today:2h<br>
+Total:761.5h
 
 ------------------------------------------
 ## 英語
@@ -25,5 +25,5 @@ Total:759.5h
 - 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:14.4h
+Today:0.1h<br>
+Total:14.5h
