--- a/202403/11.md
+++ b/202403/11.md
@@ -15,8 +15,8 @@ JavaScript
 - JavaScript Primer→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:764.4h
+Today:1.3h<br>
+Total:765.7h
 
 ------------------------------------------
 ## 英語
@@ -25,5 +25,5 @@ Total:764.4h
 - 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:14.6h
+Today:0.1h<br>
+Total:14.7h
