--- a/202403/13.md
+++ b/202403/13.md
@@ -15,8 +15,8 @@ JavaScript
 - JavaScript Primer→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:767.3h
+Today:0.5h<br>
+Total:767.8h
 
 ------------------------------------------
 ## 英語
@@ -25,5 +25,5 @@ Total:767.3h
 - 一億人の英文法
 
 ### 学習時間
-Today:h<br>
-Total:14.8h
+Today:0.1h<br>
+Total:14.9h
