--- a/202403/16.md
+++ b/202403/16.md
@@ -12,7 +12,8 @@
 ## HC
 ### 取り組んだ課題一覧＋わかったこと
 JavaScript
-- JavaScript Primer→仕掛中
+- JavaScript Primer→完了
+- javascriptでカレンダーを作る→仕掛中
 
 ### 学習時間
 Today:h<br>
