--- a/202403/16.md
+++ b/202403/16.md
@@ -13,7 +13,7 @@
 ### 取り組んだ課題一覧＋わかったこと
 JavaScript
 - JavaScript Primer→完了
-- javascriptでカレンダーを作る→仕掛中
+- javascriptでカレンダーを作る→レビュー中
 
 ### 学習時間
 Today:h<br>
@@ -26,5 +26,5 @@ Total:767.9h
 
 
 ### 学習時間
-Today:h<br>
-Total:15.1h
+Today:0.1h<br>
+Total:15.2h
