--- a/202403/16.md
+++ b/202403/16.md
@@ -16,8 +16,8 @@ JavaScript
 - javascriptでカレンダーを作る→レビュー中
 
 ### 学習時間
-Today:h<br>
-Total:767.9h
+Today:7.3h<br>
+Total:775.2h
 
 ------------------------------------------
 ## 英語
