--- a/202403/17.md
+++ b/202403/17.md
@@ -17,8 +17,8 @@ JavaScript
 - ToDo List→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:775.2h
+Today:0.5h<br>
+Total:775.7h
 
 ------------------------------------------
 ## 英語
@@ -27,5 +27,5 @@ Total:775.2h
 
 
 ### 学習時間
-Today:h<br>
-Total:15.2h
+Today:0.1h<br>
+Total:15.3h
