--- a/202403/18.md
+++ b/202403/18.md
@@ -17,8 +17,8 @@ JavaScript
 - ToDo List→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:775.7h
+Today:0.3h<br>
+Total:776h
 
 ------------------------------------------
 ## 英語
@@ -27,5 +27,5 @@ Total:775.7h
 
 
 ### 学習時間
-Today:h<br>
-Total:15.3h
+Today:0.1h<br>
+Total:15.4h
