--- a/202403/19.md
+++ b/202403/19.md
@@ -17,8 +17,8 @@ JavaScript
 - ToDo List→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:776h
+Today:1.6h<br>
+Total:777.6h
 
 ------------------------------------------
 ## 英語
@@ -27,5 +27,5 @@ Total:776h
 
 
 ### 学習時間
-Today:h<br>
-Total:15.4h
+Today:0.1h<br>
+Total:15.5h
