--- a/202403/20.md
+++ b/202403/20.md
@@ -13,12 +13,12 @@
 ### 取り組んだ課題一覧＋わかったこと
 JavaScript
 - JavaScript Primer→完了
-- javascriptでカレンダーを作る→レビュー中
+- javascriptでカレンダーを作る→完了
 - ToDo List→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:777.6h
+Today:1.5h<br>
+Total:779.1h
 
 ------------------------------------------
 ## 英語
@@ -27,5 +27,5 @@ Total:777.6h
 
 
 ### 学習時間
-Today:h<br>
-Total:15.5h
+Today:0.1h<br>
+Total:15.6h
