--- a/202403/21.md
+++ b/202403/21.md
@@ -17,8 +17,8 @@ JavaScript
 - ToDo List→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:779.1h
+Today:1.3h<br>
+Total:780.4h
 
 ------------------------------------------
 ## 英語
@@ -27,5 +27,5 @@ Total:779.1h
 
 
 ### 学習時間
-Today:h<br>
-Total:15.6h
+Today:0.1h<br>
+Total:15.7h
