--- a/202403/25.md
+++ b/202403/25.md
@@ -17,8 +17,8 @@ JavaScript
 - ToDo List→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:784h
+Today:1.1h<br>
+Total:785.1h
 
 ------------------------------------------
 ## 英語
@@ -27,5 +27,5 @@ Total:784h
 
 
 ### 学習時間
-Today:h<br>
-Total:16h
+Today:0.1h<br>
+Total:16.1h
