--- a/202403/27.md
+++ b/202403/27.md
@@ -15,8 +15,8 @@ JavaScript
 - 【JS】ガチで学びたい人のためのJavaScriptメカニズム | Udemy→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:786.2h
+Today:0.8h<br>
+Total:787h
 
 ------------------------------------------
 ## 英語
@@ -25,5 +25,5 @@ Total:786.2h
 
 
 ### 学習時間
-Today:h<br>
-Total:16.3h
+Today:0.1h<br>
+Total:16.4h
