--- a/202403/28.md
+++ b/202403/28.md
@@ -15,8 +15,8 @@ JavaScript
 - 【JS】ガチで学びたい人のためのJavaScriptメカニズム | Udemy→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:787h
+Today:0.5h<br>
+Total:787.5h
 
 ------------------------------------------
 ## 英語
@@ -25,5 +25,5 @@ Total:787h
 
 
 ### 学習時間
-Today:h<br>
-Total:16.4h
+Today:0.2h<br>
+Total:16.6h
