--- a/202403/30.md
+++ b/202403/30.md
@@ -15,8 +15,8 @@ JavaScript
 - 【JS】ガチで学びたい人のためのJavaScriptメカニズム | Udemy→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:787.5h
+Today:3h<br>
+Total:790.5h
 
 ------------------------------------------
 ## 英語
@@ -25,5 +25,5 @@ Total:787.5h
 
 
 ### 学習時間
-Today:h<br>
-Total:16.7h
+Today:0.1h<br>
+Total:16.8h
