--- a/202403/31.md
+++ b/202403/31.md
@@ -15,8 +15,8 @@ JavaScript
 - 【JS】ガチで学びたい人のためのJavaScriptメカニズム | Udemy→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:790.5h
+Today:3.3h<br>
+Total:793.8h
 
 ------------------------------------------
 ## 英語
@@ -25,5 +25,5 @@ Total:790.5h
 
 
 ### 学習時間
-Today:h<br>
-Total:16.8h
+Today:0.1h<br>
+Total:16.9h
