--- a/202404/01.md
+++ b/202404/01.md
@@ -13,10 +13,12 @@
 ### 取り組んだ課題一覧＋わかったこと
 JavaScript
 - 【JS】ガチで学びたい人のためのJavaScriptメカニズム | Udemy→仕掛中
+Linux（復讐）
+- 新しい教科書
 
 ### 学習時間
-Today:h<br>
-Total:793.8h
+Today:2.4h<br>
+Total:796.2h
 
 ------------------------------------------
 ## 英語
