--- a/202404/02.md
+++ b/202404/02.md
@@ -17,8 +17,8 @@ Linux（復讐）
 - 新しい教科書
 
 ### 学習時間
-Today:h<br>
-Total:796.2h
+Today:1.4h<br>
+Total:797.6h
 
 ------------------------------------------
 ## 英語
