--- a/202404/03.md
+++ b/202404/03.md
@@ -13,12 +13,13 @@
 ### 取り組んだ課題一覧＋わかったこと
 JavaScript
 - 【JS】ガチで学びたい人のためのJavaScriptメカニズム | Udemy→仕掛中
-Linux（復讐）
-- 新しい教科書
+Linux（復讐）、セキュリティ
+- 新しい教科書→完了
+- ハッキングラボ→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:797.6h
+Today:1.9h<br>
+Total:799.5h
 
 ------------------------------------------
 ## 英語
