--- a/202404/04.md
+++ b/202404/04.md
@@ -7,6 +7,7 @@
 ### 500時間達成!!_2023/12/19
 ### 600時間達成!!_2024/1/11
 ### 700時間達成!!_2024/2/19
+### 800時間達成!!_2024/4/4
 
 ------------------------------------------
 ## HC
@@ -14,12 +15,11 @@
 JavaScript
 - 【JS】ガチで学びたい人のためのJavaScriptメカニズム | Udemy→仕掛中
 Linux（復讐）、セキュリティ
-- 新しい教科書→完了
 - ハッキングラボ→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:799.5h
+Today:1.3h<br>
+Total:800.8h
 
 ------------------------------------------
 ## 英語
