--- a/202404/05.md
+++ b/202404/05.md
@@ -14,11 +14,11 @@
 ### 取り組んだ課題一覧＋わかったこと
 JavaScript
 - 【JS】ガチで学びたい人のためのJavaScriptメカニズム | Udemy→仕掛中
-Linux（復讐）、セキュリティ
+Linux（復習）、セキュリティ
 - ハッキングラボ→仕掛中
 
 ### 学習時間
-Today:1.3h<br>
+Today:h<br>
 Total:800.8h
 
 ------------------------------------------
@@ -28,5 +28,5 @@ Total:800.8h
 
 
 ### 学習時間
-Today:0.8h<br>
-Total:19.2h
+Today:0.7h<br>
+Total:19.9h
