--- a/202404/05.md
+++ b/202404/05.md
@@ -14,12 +14,14 @@
 ### 取り組んだ課題一覧＋わかったこと
 JavaScript
 - 【JS】ガチで学びたい人のためのJavaScriptメカニズム | Udemy→仕掛中
-Linux（復習）、セキュリティ
+Linux、セキュリティ
 - ハッキングラボ→仕掛中
+Python
+- シリコンバレーPython大全→復習
 
 ### 学習時間
-Today:h<br>
-Total:800.8h
+Today:0.3h<br>
+Total:801.1h
 
 ------------------------------------------
 ## 英語
