--- a/202404/06.md
+++ b/202404/06.md
@@ -20,10 +20,11 @@ Linux、セキュリティ
 
 Python
 - シリコンバレーPython大全→復習
+- Python実践入門→復習
 
 ### 学習時間
-Today:h<br>
-Total:801.1h
+Today:2.6h<br>
+Total:803.7h
 
 ------------------------------------------
 ## 英語
