--- a/202404/07.md
+++ b/202404/07.md
@@ -15,15 +15,12 @@
 JavaScript
 - 【JS】ガチで学びたい人のためのJavaScriptメカニズム | Udemy→仕掛中
 
-Linux、セキュリティ
-- ハッキングラボ→仕掛中
-
 Python
 - Python実践入門→復習
 
 ### 学習時間
-Today:h<br>
-Total:803.7h
+Today:3h<br>
+Total:806.7h
 
 ------------------------------------------
 ## 英語
