--- a/202404/08.md
+++ b/202404/08.md
@@ -16,11 +16,11 @@ JavaScript
 - 【JS】ガチで学びたい人のためのJavaScriptメカニズム | Udemy→仕掛中
 
 Python
-- Python実践入門→復習
+- 現役シリコンバレーエンジニアが教えるPython 3 入門 + 応用 +アメリカのシリコンバレー流コードスタイル→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:806.7h
+Today:1.5h<br>
+Total:808.2h
 
 ------------------------------------------
 ## 英語
