--- a/202404/09.md
+++ b/202404/09.md
@@ -19,8 +19,8 @@ Python
 - 現役シリコンバレーエンジニアが教えるPython 3 入門 + 応用 +アメリカのシリコンバレー流コードスタイル→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:808.2h
+Today:1.8h<br>
+Total:810h
 
 ------------------------------------------
 ## 英語
@@ -29,5 +29,5 @@ Total:808.2h
 
 
 ### 学習時間
-Today:h<br>
-Total:20.9h
+Today:0.5h<br>
+Total:21.4h
