--- a/202404/10.md
+++ b/202404/10.md
@@ -19,8 +19,8 @@ Python
 - 現役シリコンバレーエンジニアが教えるPython 3 入門 + 応用 +アメリカのシリコンバレー流コードスタイル→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:810h
+Today:1.5h<br>
+Total:811.5h
 
 ------------------------------------------
 ## 英語
