--- a/202404/11.md
+++ b/202404/11.md
@@ -13,7 +13,8 @@
 ## HC
 ### 取り組んだ課題一覧＋わかったこと
 JavaScript
-- 【JS】ガチで学びたい人のためのJavaScriptメカニズム | Udemy→仕掛中
+- 【JS】ガチで学びたい人のためのJavaScriptメカニズム | Udemy→完了
+- 上級課題→仕掛中
 
 Python
 - 現役シリコンバレーエンジニアが教えるPython 3 入門 + 応用 +アメリカのシリコンバレー流コードスタイル→仕掛中
