--- a/202404/11.md
+++ b/202404/11.md
@@ -20,8 +20,8 @@ Python
 - 現役シリコンバレーエンジニアが教えるPython 3 入門 + 応用 +アメリカのシリコンバレー流コードスタイル→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:811.5h
+Today:1.3h<br>
+Total:812.8h
 
 ------------------------------------------
 ## 英語
