--- a/202404/12.md
+++ b/202404/12.md
@@ -19,8 +19,8 @@ Python
 - 現役シリコンバレーエンジニアが教えるPython 3 入門 + 応用 +アメリカのシリコンバレー流コードスタイル→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:812.8h
+Today:1.1h<br>
+Total:813.9h
 
 ------------------------------------------
 ## 英語
