--- a/202404/13.md
+++ b/202404/13.md
@@ -19,8 +19,8 @@ Python
 - 現役シリコンバレーエンジニアが教えるPython 3 入門 + 応用 +アメリカのシリコンバレー流コードスタイル→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:813.9h
+Today:3h<br>
+Total:816.9h
 
 ------------------------------------------
 ## 英語
