--- a/202404/14.md
+++ b/202404/14.md
@@ -13,14 +13,18 @@
 ## HC
 ### 取り組んだ課題一覧＋わかったこと
 JavaScript
-- 上級課題→仕掛中
+- 上級課題→レビュー中
+
+React
+- モダンJavaScriptの基本から始めるReact実践の教科書→仕掛中
+- モダンJavaScriptの基礎から始める挫折しないためのReact入門→仕掛中
 
 Python
-- 現役シリコンバレーエンジニアが教えるPython 3 入門 + 応用 +アメリカのシリコンバレー流コードスタイル→仕掛中
+- 現役シリコンバレーエンジニアが教えるPython3入門+応用+アメリカのシリコンバレー流コードスタイル→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:816.9h
+Today:4.4h<br>
+Total:821.3h
 
 ------------------------------------------
 ## 英語
@@ -29,5 +33,5 @@ Total:816.9h
 
 
 ### 学習時間
-Today:h<br>
-Total:23.4h
+Today:0.5h<br>
+Total:23.9h
