--- a/202404/15.md
+++ b/202404/15.md
@@ -23,8 +23,8 @@ Python
 - 現役シリコンバレーエンジニアが教えるPython3入門+応用+アメリカのシリコンバレー流コードスタイル→
 
 ### 学習時間
-Today:h<br>
-Total:821.3h
+Today:1.1h<br>
+Total:822.4h
 
 ------------------------------------------
 ## 英語
