--- a/202404/16.md
+++ b/202404/16.md
@@ -16,8 +16,8 @@ JavaScript
 - 上級課題→レビュー中
 
 React
-- モダンJavaScriptの基本から始めるReact実践の教科書→仕掛中
-- モダンJavaScriptの基礎から始める挫折しないためのReact入門→
+- モダンJavaScriptの基本から始めるReact実践の教科書→ch7まで完了
+- モダンJavaScriptの基礎から始める挫折しないためのReact入門→仕掛中
 
 Python
 - 現役シリコンバレーエンジニアが教えるPython3入門+応用+アメリカのシリコンバレー流コードスタイル→
