--- a/202404/16.md
+++ b/202404/16.md
@@ -13,7 +13,7 @@
 ## HC
 ### 取り組んだ課題一覧＋わかったこと
 JavaScript
-- 上級課題→レビュー中
+- 上級課題→完了
 
 React
 - モダンJavaScriptの基本から始めるReact実践の教科書→ch7まで完了
@@ -23,8 +23,8 @@ Python
 - 現役シリコンバレーエンジニアが教えるPython3入門+応用+アメリカのシリコンバレー流コードスタイル→
 
 ### 学習時間
-Today:h<br>
-Total:822.4h
+Today:3.8h<br>
+Total:826.2h
 
 ------------------------------------------
 ## 英語
@@ -33,5 +33,5 @@ Total:822.4h
 
 
 ### 学習時間
-Today:h<br>
-Total:24.4h
+Today:0.5h<br>
+Total:24.9h
