--- a/202404/17.md
+++ b/202404/17.md
@@ -20,8 +20,8 @@ Python
 - 現役シリコンバレーエンジニアが教えるPython3入門+応用+アメリカのシリコンバレー流コードスタイル→
 
 ### 学習時間
-Today:h<br>
-Total:826.2h
+Today:1.1h<br>
+Total:827.3h
 
 ------------------------------------------
 ## 英語
