--- a/202404/18.md
+++ b/202404/18.md
@@ -20,8 +20,8 @@ Python
 - 現役シリコンバレーエンジニアが教えるPython3入門+応用+アメリカのシリコンバレー流コードスタイル→
 
 ### 学習時間
-Today:h<br>
-Total:827.3h
+Today:0.5h<br>
+Total:827.8h
 
 ------------------------------------------
 ## 英語
@@ -30,5 +30,5 @@ Total:827.3h
 
 
 ### 学習時間
-Today:h<br>
-Total:25.4h
+Today:0.5h<br>
+Total:25.9h
