--- a/202404/19.md
+++ b/202404/19.md
@@ -20,8 +20,8 @@ Python
 - 現役シリコンバレーエンジニアが教えるPython3入門+応用+アメリカのシリコンバレー流コードスタイル→
 
 ### 学習時間
-Today:h<br>
-Total:827.8h
+Today:0.9h<br>
+Total:828.7h
 
 ------------------------------------------
 ## 英語
