--- a/202404/21.md
+++ b/202404/21.md
@@ -20,8 +20,8 @@ Python
 - 現役シリコンバレーエンジニアが教えるPython3入門+応用+アメリカのシリコンバレー流コードスタイル→
 
 ### 学習時間
-Today:h<br>
-Total:830.6h
+Today:1h<br>
+Total:831.6h
 
 ------------------------------------------
 ## 英語
@@ -30,5 +30,5 @@ Total:830.6h
 
 
 ### 学習時間
-Today:h<br>
-Total:26.9h
+Today:0.5h<br>
+Total:27.4h
