--- a/202404/22.md
+++ b/202404/22.md
@@ -20,8 +20,8 @@ Python
 - 現役シリコンバレーエンジニアが教えるPython3入門+応用+アメリカのシリコンバレー流コードスタイル→
 
 ### 学習時間
-Today:h<br>
-Total:831.6h
+Today:0.3h<br>
+Total:831.9h
 
 ------------------------------------------
 ## 英語
@@ -30,5 +30,5 @@ Total:831.6h
 
 
 ### 学習時間
-Today:h<br>
-Total:27.4h
+Today:0.5h<br>
+Total:27.9h
