--- a/202404/23.md
+++ b/202404/23.md
@@ -20,8 +20,8 @@ Python
 - 現役シリコンバレーエンジニアが教えるPython3入門+応用+アメリカのシリコンバレー流コードスタイル→
 
 ### 学習時間
-Today:h<br>
-Total:831.9h
+Today:1.6h<br>
+Total:833.5h
 
 ------------------------------------------
 ## 英語
@@ -30,5 +30,5 @@ Total:831.9h
 
 
 ### 学習時間
-Today:h<br>
-Total:27.9h
+Today:0.5h<br>
+Total:28.4h
