--- a/202404/24.md
+++ b/202404/24.md
@@ -20,8 +20,8 @@ Python
 - 現役シリコンバレーエンジニアが教えるPython3入門+応用+アメリカのシリコンバレー流コードスタイル→
 
 ### 学習時間
-Today:h<br>
-Total:833.5h
+Today:0.5h<br>
+Total:834h
 
 ------------------------------------------
 ## 英語
