--- a/202404/25.md
+++ b/202404/25.md
@@ -20,8 +20,8 @@ Python
 - 現役シリコンバレーエンジニアが教えるPython3入門+応用+アメリカのシリコンバレー流コードスタイル→
 
 ### 学習時間
-Today:h<br>
-Total:834h
+Today:1.8h<br>
+Total:835.8h
 
 ------------------------------------------
 ## 英語
@@ -30,5 +30,5 @@ Total:834h
 
 
 ### 学習時間
-Today:h<br>
-Total:28.9h
+Today:0.5h<br>
+Total:29.4h
