--- a/202404/27.md
+++ b/202404/27.md
@@ -20,8 +20,8 @@ Python
 - 現役シリコンバレーエンジニアが教えるPython3入門+応用+アメリカのシリコンバレー流コードスタイル→
 
 ### 学習時間
-Today:h<br>
-Total:835.8h
+Today:0.3h<br>
+Total:836.1h
 
 ------------------------------------------
 ## 英語
@@ -30,5 +30,5 @@ Total:835.8h
 
 
 ### 学習時間
-Today:h<br>
-Total:29.7h
+Today:0.5h<br>
+Total:30.2h
