--- a/202404/28.md
+++ b/202404/28.md
@@ -20,8 +20,8 @@ Python
 - 現役シリコンバレーエンジニアが教えるPython3入門+応用+アメリカのシリコンバレー流コードスタイル→
 
 ### 学習時間
-Today:h<br>
-Total:836.1h
+Today:0.9h<br>
+Total:837h
 
 ------------------------------------------
 ## 英語
@@ -30,5 +30,5 @@ Total:836.1h
 
 
 ### 学習時間
-Today:h<br>
-Total:30.2h
+Today:0.5h<br>
+Total:30.7h
