--- a/202404/29.md
+++ b/202404/29.md
@@ -15,6 +15,7 @@
 React
 - モダンJavaScriptの基本から始めるReact実践の教科書→ch7まで完了
 - モダンJavaScriptの基礎から始める挫折しないためのReact入門→完了
+- チュートリアル→完了
 
 Python
 - 現役シリコンバレーエンジニアが教えるPython3入門+応用+アメリカのシリコンバレー流コードスタイル→
