--- a/202404/29.md
+++ b/202404/29.md
@@ -21,8 +21,8 @@ Python
 - 現役シリコンバレーエンジニアが教えるPython3入門+応用+アメリカのシリコンバレー流コードスタイル→
 
 ### 学習時間
-Today:h<br>
-Total:837h
+Today:2h<br>
+Total:839h
 
 ------------------------------------------
 ## 英語
@@ -31,5 +31,5 @@ Total:837h
 
 
 ### 学習時間
-Today:h<br>
-Total:30.7h
+Today:0.5h<br>
+Total:31.2h
