--- a/202404/30.md
+++ b/202404/30.md
@@ -22,8 +22,8 @@ Python
 - 現役シリコンバレーエンジニアが教えるPython3入門+応用+アメリカのシリコンバレー流コードスタイル→
 
 ### 学習時間
-Today:h<br>
-Total:839h
+Today:1.2h<br>
+Total:840.2h
 
 ------------------------------------------
 ## 英語
@@ -32,5 +32,5 @@ Total:839h
 
 
 ### 学習時間
-Today:h<br>
-Total:31.2h
+Today:0.3h<br>
+Total:31.5h
