--- a/202405/01.md
+++ b/202405/01.md
@@ -22,8 +22,8 @@ Python
 - 現役シリコンバレーエンジニアが教えるPython3入門+応用+アメリカのシリコンバレー流コードスタイル→
 
 ### 学習時間
-Today:h<br>
-Total:840.2h
+Today:1.4h<br>
+Total:841.6h
 
 ------------------------------------------
 ## 英語
@@ -32,5 +32,5 @@ Total:840.2h
 
 
 ### 学習時間
-Today:h<br>
-Total:31.5h
+Today:0.5h<br>
+Total:32h
