--- a/202405/02.md
+++ b/202405/02.md
@@ -17,8 +17,8 @@ React
 - Reactに入門した人のためのもっとReactが楽しくなるステップアップコース完全版→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:841.6h
+Today:1.3h<br>
+Total:842.9h
 
 ------------------------------------------
 ## 英語
@@ -27,5 +27,5 @@ Total:841.6h
 
 
 ### 学習時間
-Today:h<br>
-Total:32h
+Today:0.5h<br>
+Total:32.5h
