--- a/202405/03.md
+++ b/202405/03.md
@@ -17,8 +17,8 @@ React
 - Reactに入門した人のためのもっとReactが楽しくなるステップアップコース完全版→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:842.9h
+Today:1.5h<br>
+Total:844.4h
 
 ------------------------------------------
 ## 英語
@@ -28,4 +28,4 @@ Total:842.9h
 
 ### 学習時間
 Today:0.5h<br>
-Total:33h
+Total:33.5h
