--- a/202405/04.md
+++ b/202405/04.md
@@ -13,12 +13,11 @@
 ## HC
 ### 取り組んだ課題一覧＋わかったこと
 React
-- モダンJavaScriptの基本から始めるReact実践の教科書→完了
 - Reactに入門した人のためのもっとReactが楽しくなるステップアップコース完全版→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:844.4h
+Today:2.5h<br>
+Total:846.9h
 
 ------------------------------------------
 ## 英語
@@ -27,5 +26,5 @@ Total:844.4h
 
 
 ### 学習時間
-Today:h<br>
-Total:33.5h
+Today:0.3h<br>
+Total:33.8h
