--- a/202405/05.md
+++ b/202405/05.md
@@ -16,8 +16,8 @@ React
 - Reactに入門した人のためのもっとReactが楽しくなるステップアップコース完全版→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:846.9h
+Today:2.5h<br>
+Total:849.4h
 
 ------------------------------------------
 ## 英語
