--- a/202405/06.md
+++ b/202405/06.md
@@ -13,7 +13,8 @@
 ## HC
 ### 取り組んだ課題一覧＋わかったこと
 React
-- Reactに入門した人のためのもっとReactが楽しくなるステップアップコース完全版→仕掛中
+- Reactに入門した人のためのもっとReactが楽しくなるステップアップコース完全版→完了
+- ToDo List→仕掛中
 
 ### 学習時間
 Today:h<br>
@@ -26,5 +27,5 @@ Total:849.4h
 
 
 ### 学習時間
-Today:h<br>
-Total:34.3h
+Today:0.5h<br>
+Total:34.8h
