--- a/202405/06.md
+++ b/202405/06.md
@@ -15,10 +15,11 @@
 React
 - Reactに入門した人のためのもっとReactが楽しくなるステップアップコース完全版→完了
 - ToDo List→仕掛中
+- 【Reactアプリ開発】3種類のReactアプリケーションを構築して、Reactの理解をさらに深めるステップアップ講座 | Udemy→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:849.4h
+Today:4.3h<br>
+Total:853.7h
 
 ------------------------------------------
 ## 英語
