--- a/202405/07.md
+++ b/202405/07.md
@@ -13,13 +13,12 @@
 ## HC
 ### 取り組んだ課題一覧＋わかったこと
 React
-- Reactに入門した人のためのもっとReactが楽しくなるステップアップコース完全版→完了
 - ToDo List→仕掛中
 - 【Reactアプリ開発】3種類のReactアプリケーションを構築して、Reactの理解をさらに深めるステップアップ講座 | Udemy→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:853.7h
+Today:1h<br>
+Total:854.7h
 
 ------------------------------------------
 ## 英語
