--- a/202405/08.md
+++ b/202405/08.md
@@ -17,8 +17,8 @@ React
 - 【Reactアプリ開発】3種類のReactアプリケーションを構築して、Reactの理解をさらに深めるステップアップ講座 | Udemy→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:854.7h
+Today:0.5h<br>
+Total:855.2h
 
 ------------------------------------------
 ## 英語
