--- a/202405/09.md
+++ b/202405/09.md
@@ -17,8 +17,8 @@ React
 - 【Reactアプリ開発】3種類のReactアプリケーションを構築して、Reactの理解をさらに深めるステップアップ講座 | Udemy→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:855.2h
+Today:2.1h<br>
+Total:857.3h
 
 ------------------------------------------
 ## 英語
@@ -27,5 +27,5 @@ Total:855.2h
 
 
 ### 学習時間
-Today:h<br>
-Total:35.8h
+Today:0.3h<br>
+Total:36.1h
