--- a/202405/10.md
+++ b/202405/10.md
@@ -17,8 +17,8 @@ React
 - 【Reactアプリ開発】3種類のReactアプリケーションを構築して、Reactの理解をさらに深めるステップアップ講座 | Udemy→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:857.3h
+Today:1.5h<br>
+Total:858.8h
 
 ------------------------------------------
 ## 英語
@@ -27,5 +27,5 @@ Total:857.3h
 
 
 ### 学習時間
-Today:h<br>
-Total:36.1h
+Today:0.5h<br>
+Total:36.6h
