--- a/202405/11.md
+++ b/202405/11.md
@@ -13,12 +13,15 @@
 ## HC
 ### 取り組んだ課題一覧＋わかったこと
 React
-- ToDo List→仕掛中
+- ToDo List→レビュー中
 - 【Reactアプリ開発】3種類のReactアプリケーションを構築して、Reactの理解をさらに深めるステップアップ講座 | Udemy→仕掛中
 
+その他
+- IT用語、ネットワーク関連（復習）
+
 ### 学習時間
-Today:h<br>
-Total:858.8h
+Today:4h<br>
+Total:862.8h
 
 ------------------------------------------
 ## 英語
@@ -27,5 +30,5 @@ Total:858.8h
 
 
 ### 学習時間
-Today:h<br>
-Total:36.6h
+Today:0.5h<br>
+Total:37.1h
