--- a/202405/12.md
+++ b/202405/12.md
@@ -16,8 +16,8 @@ React
 - ToDo List→レビュー中
 - 【Reactアプリ開発】3種類のReactアプリケーションを構築して、Reactの理解をさらに深めるステップアップ講座 | Udemy→仕掛中
 
-Web技術の基本を学ぶ
-- IT用語、ネットワーク関連（復習）
+復習
+- IT用語、ネットワーク関連
 
 ### 学習時間
 Today:h<br>
