--- a/202405/12.md
+++ b/202405/12.md
@@ -13,15 +13,12 @@
 ## HC
 ### 取り組んだ課題一覧＋わかったこと
 React
-- ToDo List→レビュー中
+- ToDo List→完了
 - 【Reactアプリ開発】3種類のReactアプリケーションを構築して、Reactの理解をさらに深めるステップアップ講座 | Udemy→仕掛中
 
-復習
-- IT用語、ネットワーク関連
-
 ### 学習時間
-Today:h<br>
-Total:862.8h
+Today:3h<br>
+Total:865.8h
 
 ------------------------------------------
 ## 英語
@@ -30,5 +27,5 @@ Total:862.8h
 
 
 ### 学習時間
-Today:h<br>
-Total:37.1h
+Today:0.5h<br>
+Total:37.6h
