--- a/202405/14.md
+++ b/202405/14.md
@@ -16,8 +16,8 @@ React
 - 【Reactアプリ開発】3種類のReactアプリケーションを構築して、Reactの理解をさらに深めるステップアップ講座 | Udemy→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:865.8h
+Today:1.2h<br>
+Total:867h
 
 ------------------------------------------
 ## 英語
@@ -26,5 +26,5 @@ Total:865.8h
 
 
 ### 学習時間
-Today:h<br>
-Total:37.7h
+Today:0.1h<br>
+Total:37.8h
