--- a/202405/15.md
+++ b/202405/15.md
@@ -13,7 +13,8 @@
 ## HC
 ### 取り組んだ課題一覧＋わかったこと
 React
-- 【Reactアプリ開発】3種類のReactアプリケーションを構築して、Reactの理解をさらに深めるステップアップ講座 | Udemy→仕掛中
+- 【Reactアプリ開発】3種類のReactアプリケーションを構築して、Reactの理解をさらに深めるステップアップ講座 | Udemy→完了
+- ReactでTrelloクローンアプリケーションを作ってReactをマスターしよう！ | Udemy→仕掛中
 
 ### 学習時間
 Today:h<br>
