--- a/202405/15.md
+++ b/202405/15.md
@@ -17,8 +17,8 @@ React
 - ReactでTrelloクローンアプリケーションを作ってReactをマスターしよう！ | Udemy→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:867h
+Today:1.1h<br>
+Total:868.1h
 
 ------------------------------------------
 ## 英語
@@ -27,5 +27,5 @@ Total:867h
 
 
 ### 学習時間
-Today:h<br>
-Total:37.8h
+Today:0.2h<br>
+Total:38h
