--- a/202405/16.md
+++ b/202405/16.md
@@ -16,8 +16,8 @@ React
 - ReactでTrelloクローンアプリケーションを作ってReactをマスターしよう！ | Udemy→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:868.1h
+Today:1.7h<br>
+Total:869.8h
 
 ------------------------------------------
 ## 英語
@@ -26,5 +26,5 @@ Total:868.1h
 
 
 ### 学習時間
-Today:h<br>
-Total:38h
+Today:0.2h<br>
+Total:38.2h
