--- a/202405/17.md
+++ b/202405/17.md
@@ -16,8 +16,8 @@ React
 - ReactでTrelloクローンアプリケーションを作ってReactをマスターしよう！ | Udemy→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:869.8h
+Today:0.8h<br>
+Total:870.6h
 
 ------------------------------------------
 ## 英語
@@ -26,5 +26,5 @@ Total:869.8h
 
 
 ### 学習時間
-Today:h<br>
-Total:38.2h
+Today:0.5h<br>
+Total:38.7h
