--- a/202405/18.md
+++ b/202405/18.md
@@ -16,8 +16,8 @@ React
 - ReactでTrelloクローンアプリケーションを作ってReactをマスターしよう！ | Udemy→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:870.6h
+Today:2.9h<br>
+Total:873.5h
 
 ------------------------------------------
 ## 英語
@@ -26,5 +26,5 @@ Total:870.6h
 
 
 ### 学習時間
-Today:h<br>
-Total:38.7h
+Today:0.5h<br>
+Total:39.2h
