--- a/202405/19.md
+++ b/202405/19.md
@@ -16,9 +16,9 @@ React
 - ReactでTrelloクローンアプリケーションを作ってReactをマスターしよう！ | Udemy→完了
 
 Webセキュリティ
-- Django→仕掛中
-- 安全なウェブサイトの作り方
-- CORS入門
+- Django→完了
+- 安全なウェブサイトの作り方→仕掛中
+- CORS入門→仕掛中
 
 ### 学習時間
 Today:2.9h<br>
