--- a/202405/19.md
+++ b/202405/19.md
@@ -17,12 +17,12 @@ React
 
 Webセキュリティ
 - Django→完了
-- 安全なウェブサイトの作り方→仕掛中
-- CORS入門→仕掛中
+- 安全なウェブサイトの作り方→完了
+- CORS入門→完了
 
 ### 学習時間
-Today:2.9h<br>
-Total:873.5h
+Today:3.2h<br>
+Total:876.7h
 
 ------------------------------------------
 ## 英語
@@ -31,5 +31,5 @@ Total:873.5h
 
 
 ### 学習時間
-Today:h<br>
-Total:39.2h
+Today:0.4h<br>
+Total:39.6h
