--- a/202405/20.md
+++ b/202405/20.md
@@ -15,10 +15,10 @@
 SPA
 - 基礎編 React Hooks + Django REST Framework API でフルスタックWeb開発→仕掛中
 - SNS編 React Hooks + Django RestFramework API でフルスタックWeb開発
-
+- Django復習
 
 ### 学習時間
-Today:3.2h<br>
+Today:h<br>
 Total:876.7h
 
 ------------------------------------------
