--- a/202405/20.md
+++ b/202405/20.md
@@ -18,8 +18,8 @@ SPA
 - Django復習
 
 ### 学習時間
-Today:h<br>
-Total:876.7h
+Today:1.4h<br>
+Total:878.1h
 
 ------------------------------------------
 ## 英語
@@ -28,5 +28,5 @@ Total:876.7h
 
 
 ### 学習時間
-Today:h<br>
-Total:39.6h
+Today:0.5h<br>
+Total:40.1h
