--- a/202405/21.md
+++ b/202405/21.md
@@ -18,8 +18,8 @@ SPA
 - Django復習
 
 ### 学習時間
-Today:h<br>
-Total:878.1h
+Today:1.1h<br>
+Total:879.2h
 
 ------------------------------------------
 ## 英語
@@ -28,5 +28,5 @@ Total:878.1h
 
 
 ### 学習時間
-Today:h<br>
-Total:40.1h
+Today:0.3h<br>
+Total:40.4h
