--- a/202405/22.md
+++ b/202405/22.md
@@ -18,8 +18,8 @@ SPA
 - Django復習
 
 ### 学習時間
-Today:h<br>
-Total:879.2h
+Today:1.4h<br>
+Total:880.6h
 
 ------------------------------------------
 ## 英語
@@ -28,5 +28,5 @@ Total:879.2h
 
 
 ### 学習時間
-Today:h<br>
-Total:40.4h
+Today:0.3h<br>
+Total:40.7h
