--- a/202405/23.md
+++ b/202405/23.md
@@ -18,8 +18,8 @@ SPA
 - Django復習
 
 ### 学習時間
-Today:h<br>
-Total:880.6h
+Today:1.5h<br>
+Total:882.1h
 
 ------------------------------------------
 ## 英語
@@ -28,5 +28,5 @@ Total:880.6h
 
 
 ### 学習時間
-Today:h<br>
-Total:40.7h
+Today:0.3h<br>
+Total:41h
