--- a/202405/24.md
+++ b/202405/24.md
@@ -18,8 +18,8 @@ SPA
 - Django復習
 
 ### 学習時間
-Today:h<br>
-Total:882.1h
+Today:2.6h<br>
+Total:884.7h
 
 ------------------------------------------
 ## 英語
@@ -28,5 +28,5 @@ Total:882.1h
 
 
 ### 学習時間
-Today:h<br>
-Total:41h
+Today:0.3h<br>
+Total:41.3h
