--- a/202405/26.md
+++ b/202405/26.md
@@ -18,8 +18,8 @@ SPA
 - Django復習→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:888.7h
+Today:3.5h<br>
+Total:892.2h
 
 ------------------------------------------
 ## 英語
@@ -28,5 +28,5 @@ Total:888.7h
 
 
 ### 学習時間
-Today:h<br>
-Total:41.5h
+Today:0.3h<br>
+Total:41.8h
