--- a/202405/29.md
+++ b/202405/29.md
@@ -18,8 +18,8 @@ SPA
 - Django復習→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:895.8h
+Today:2.5h<br>
+Total:898.3h
 
 ------------------------------------------
 ## 英語
@@ -28,5 +28,5 @@ Total:895.8h
 
 
 ### 学習時間
-Today:h<br>
-Total:42.4h
+Today:0.1h<br>
+Total:42.5h
