--- a/202405/30.md
+++ b/202405/30.md
@@ -18,7 +18,7 @@ SPA
 - Django復習→仕掛中
 
 ### 学習時間
-Today:2.5h<br>
+Today:h<br>
 Total:898.3h
 
 ------------------------------------------
@@ -28,5 +28,5 @@ Total:898.3h
 
 
 ### 学習時間
-Today:0.1h<br>
+Today:h<br>
 Total:42.5h
