--- a/202405/30.md
+++ b/202405/30.md
@@ -8,6 +8,7 @@
 ### 600時間達成!!_2024/1/11
 ### 700時間達成!!_2024/2/19
 ### 800時間達成!!_2024/4/4
+### 900時間達成!!_2024/5/30
 
 ------------------------------------------
 ## HC
@@ -18,8 +19,8 @@ SPA
 - Django復習→仕掛中
 
 ### 学習時間
-Today:h<br>
-Total:898.3h
+Today:3.7h<br>
+Total:900.2h
 
 ------------------------------------------
 ## 英語
@@ -28,5 +29,5 @@ Total:898.3h
 
 
 ### 学習時間
-Today:h<br>
-Total:42.5h
+Today:0.3h<br>
+Total:42.8h
