--- a/202405/30.md
+++ b/202405/30.md
@@ -13,10 +13,24 @@
 ------------------------------------------
 ## HC
 ### 取り組んだ課題一覧＋わかったこと
-SPA
-- ~~基礎編 React Hooks + Django REST Framework API でフルスタックWeb開発→完了~~
-- SNS編 React Hooks + Django Rest Framework API でフルスタックWeb開発→仕掛中
-- Django復習→仕掛中
+SPA_Twitter Clone課題
+- 新規登録機能→仕掛中
+- ログイン機能
+- ツイート投稿機能
+- ツイート一覧機能
+- ツイート詳細
+- プロフィール画面実装
+- ツイート削除機能
+- コメント機能
+- コメント一覧機能
+- リツイート
+- いいね
+- フォロー
+- フォロー解除
+- 通知
+- ダイレクトメッセージ
+- ブックマーク
+- 退会
 
 ### 学習時間
 Today:3.7h<br>
@@ -26,7 +40,6 @@ Total:900.2h
 ## 英語
 ### 取り組んだ課題一覧＋わかったこと
 - スタサプ
-
 
 ### 学習時間
 Today:0.3h<br>
