--- a/202405/31.md
+++ b/202405/31.md
@@ -33,8 +33,8 @@ SPA_Twitter Clone課題
 - 退会
 
 ### 学習時間
-Today:h<br>
-Total:900.2h
+Today:1.2h<br>
+Total:901.4h
 
 ------------------------------------------
 ## 英語
@@ -42,5 +42,5 @@ Total:900.2h
 - スタサプ
 
 ### 学習時間
-Today:h<br>
-Total:42.8h
+Today:0.3h<br>
+Total:43.1h
