20240613の日報作成

--- a/2024/06/13.md
+++ b/2024/06/13.md
@@ -14,7 +14,7 @@
 ## HC
 ### 取り組んだ課題一覧＋わかったこと
 SPA_Twitter Clone課題
-- 新規登録機能→仕掛中
+- 新規登録機能→レビュー中
 - ログイン機能
 - ツイート投稿機能
 - ツイート一覧機能
@@ -33,8 +33,8 @@ SPA_Twitter Clone課題
 - 退会
 
 ### 学習時間
-Today:2.3h<br>
-Total:941.2h
+Today:2.5h<br>
+Total:943.7h
 
 ------------------------------------------
 ## 英語
@@ -43,4 +43,4 @@ Total:941.2h
 
 ### 学習時間
 Today:0.1h<br>
-Total:46.3h
+Total:46.4h
